@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.3.11-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-03-11 08:46:48, took 00:10:53, with 60 workers, on 534 cases, 0 failed, 0 traces, 0 retries
+-;-;-;2024-03-11 09:43:19, took 00:09:37, with 60 workers, on 534 cases, 0 failed, 0 traces, 1 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
