@@ -15718,3 +15718,6 @@ qc pass: dhcp with excluded address
 ---------------------------------- 2024-03-11 08:19:49 24.3.11
 no qc pass: dhcp with excluded address
 failed: dhcp with excluded address
+---------------------------------- 2024-03-11 09:19:55 24.3.11
+no failed: dhcp with excluded address
+qc pass: dhcp with excluded address
